fixed spacing

--- a/styles/sass/_mediaQuery.scss
+++ b/styles/sass/_mediaQuery.scss
@@ -60,6 +60,10 @@
         width:100%;
         margin:0 0 20px 0;
     }
+
+    .asideTop h2{
+        margin-bottom: 20px;
+    }
 }
 
 @media(max-width: 675px){
