--- a/styles/styles.css
+++ b/styles/styles.css
@@ -557,6 +557,9 @@ footer > div:nth-child(3) {
     width: 100%;
     margin: 0 0 20px 0;
   }
+  .asideTop h2 {
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 675px) {
